--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
     <div class="container">
         <h1 id="heading">TRIVIA - THE GAME</h1>
         <div class="play">
             <h1>TRIVIA-Play The Game</h1>
         </div>
-
-
         <div class="quiz">
             <div class="question"></div>
-
             <!-- all answer choices -->
             <div class="choices">
                 <div class="choice" id="A"></div>
@@ -29,11 +25,11 @@
             </div>
 
         </div>
-
         <div class="score-container"></div>
+        <button id="restart">Play Again?</button>
+        <button id="quit">Quit?</button>
     </div>
 
     <script src="./script.js"></script>
 </body>
-
 </html>
